website/versioned_docs/version-1.3.0/commands/Test-MtCisDkim.mdx
---
sidebar_class_name: hidden
description: Checks state of DKIM for all EXO domains
id: Test-MtCisDkim
title: Test-MtCisDkim
hide_title: false
hide_table_of_contents: false
custom_edit_url: https://github.com/maester365/maester/blob/main/powershell/public/Test-MtCisDkim.ps1
---

## SYNOPSIS

Checks state of DKIM for all EXO domains

## SYNTAX

```powershell
Test-MtCisDkim [[-Selector] <String>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
```

## DESCRIPTION

DKIM SHOULD be enabled for all domains.
CIS Microsoft 365 Foundations Benchmark v4.0.0

## EXAMPLES

### EXAMPLE 1

```powershell
Test-MtCisDkim
```

Returns true if DKIM record exists and EXO shows DKIM enabled

## PARAMETERS

### -Selector

Selector-name for the DKIM record to test..

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: Selector1
Accept pipeline input: False
Accept wildcard characters: False
```

### -ProgressAction

\{\{ Fill ProgressAction Description \}\}

```yaml
Type: ActionPreference
Parameter Sets: (All)
Aliases: proga

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

### System.Boolean

## NOTES

## RELATED LINKS

[https://maester.dev/docs/commands/Test-MtCisDkim](https://maester.dev/docs/commands/Test-MtCisDkim)
